# stm32f407g-disc

./: .gdbinit  .gitignore  .travis.yml  Cargo.toml  Embed.toml  README.md  discovery.cfg  memory.x  openocd.cfg  openocd.gdb  openocd_program.sh
.cargo/: config  config.toml
examples/: audio.rs  dwt_elapsed_time.rs  gpio_hal_blinky.rs  gpio_hal_busy_blinky.rs  gpio_hal_button_blinky.rs  i2c_hal_ssd1306alphabeter.rs  i2c_hal_ssd1306helloworld.rs  itm.rs  mems.rs  serial_echo.rs  serial_panic.rs
src/: accelerometer.rs  audio_out.rs  button.rs  led.rs  lib.rs
